--- a/ComposeApplication/app/src/main/res/values/strings.xml
+++ b/ComposeApplication/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">ComposeApplication</string>
     <string name="title_activity_view_demo">ViewDemoActivity</string>
+    <string name="title_activity_custom_compose">CustomComposeActivity</string>
+    <string name="title_activity_mutable_state">MutableStateActivity</string>
 </resources>
